<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_clientes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direcci_n_opcional"
            android:inputType="text"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_ubicaci_n_registrada"
            android:textSize="14sp"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnObtenerUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obtener_mi_ubicaci_n"
            android:backgroundTint="@color/colorPrimaryLigth"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnRegistrarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:backgroundTint="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:padding="12dp" />

    </LinearLayout>
</ScrollView>