<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnListarProductos"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/listadoProductos"
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCarrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCarrito"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/carrito"
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistroClientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarProductos" />

    <Button
        android:id="@+id/btnRegistroClientes"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/RegistrarClientes"
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCarrito"
        app:layout_constraintVertical_bias="0.607" />
</androidx.constraintlayout.widget.ConstraintLayout>