<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#699D68"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6A9E68"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_card" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/txtNombreProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_producto"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_breve"
                    android:textColor="@android:color/system_accent2_800"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    android:textColor="@color/colorGreen"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnEditarProducto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Editar"
                    android:src="@android:drawable/ic_menu_edit"
                    app:tint="@color/colorPrimaryLigth" />

                <ImageButton
                    android:id="@+id/btnEliminarProducto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Eliminar"
                    android:src="@android:drawable/ic_menu_delete"
                    app:tint="#B00020" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnAgregarCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorGreen"
            android:text="🛒 Agregar al Carrito"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>